# adb-wireless-toggle-sage

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  GOOD_FIRST_ISSUES.md  LICENSE  README.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good_first_issue.md
.github/workflows/: auto-release-windows-only.yml  auto-release.yml  build-windows.yml  build.yml  release.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
