[package]
name = "adb-wireless"
version = "0.1.0"
description = "A modern desktop application for enabling wireless Android debugging with one click"
authors = ["Rech Toledo rechceltoledo@gmail.com"]
license = "MIT"
repository = "https://github.com/yourusername/adb-wireless"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "adb_wireless_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3"

